--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,15 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#177BF3</color>
+    <color name="colorPrimaryDark">#1367CE</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="blueLight">#3A88E6</color>
+    <color name="gray100">#f5f5f5</color>
+    <color name="gray400">#bdbdbd</color>
+    <color name="gray500">#9e9e9e</color>
+    <color name="gray600">#757575</color>
+    <color name="red500">#F44336</color>
+    <color name="text_selection_blue">#D0E4FF</color>
 </resources>
