--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -9,7 +9,8 @@
         android:id="@+id/frame_files_pathContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="12dp">
+        android:paddingStart="12dp"
+        android:layout_marginBottom="8dp">
         <ImageView
             android:id="@+id/iv_files_back"
             android:layout_width="wrap_content"
@@ -29,6 +30,9 @@
         android:id="@+id/rv_files"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:clipToPadding="false"
         android:layout_below="@+id/frame_files_pathContainer"/>
 
 </RelativeLayout>
