--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -10,19 +10,20 @@
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
     android:layout_marginStart="12dp"
-    android:layout_marginEnd="12dp">
+    android:layout_marginEnd="12dp"
+    app:strokeWidth="0dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="12dp">
+        android:padding="24dp">
         <ImageView
             android:id="@+id/iv_file"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="12dp"
-            tools:srcCompat="@drawable/ic_folder_black_32dp"/>
+            android:layout_marginEnd="24dp"
+            app:srcCompat="@drawable/ic_folder_black_32dp"/>
 
         <ImageView
             android:id="@+id/iv_file_more"
@@ -37,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/iv_file"
             android:layout_centerVertical="true"
-            tools:text="Downloads"
+            android:text="Downloads"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:layout_toStartOf="@+id/iv_file_more"/>
