--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimary">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -27,13 +28,13 @@
                 android:text="@string/app_name"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|end"
-                app:srcCompat="@drawable/ic_add_folder_white_24dp" />
+                app:srcCompat="@drawable/ic_add_folder_white_24dp"/>
         </FrameLayout>
 
         <EditText
