--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -28,11 +28,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_files"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:clipToPadding="false"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/frame_files_pathContainer"/>
 
 </RelativeLayout>
